src/test/ui/consts/assoc_const_generic_impl.stderr
error: erroneous constant encountered
  --> $DIR/assoc_const_generic_impl.rs:11:18
   |
LL |         let () = Self::I_AM_ZERO_SIZED;
   |                  ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

